<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainbglayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_good"
    tools:context=".main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addresstxtlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/timetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Text"
            android:textSize="20dp"
            android:textColor="@color/White"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addresstxt"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <TextView
            android:id="@+id/addresstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address Text"
            android:textSize="28dp"
            android:textColor="@color/White"
            app:layout_constraintTop_toBottomOf="@+id/timetxt"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/finedustlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/addresstxtlayout"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/finedustimg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/main_icon_good"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/finedusttxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:text="@string/finedust_good"
            android:textSize="36dp"
            app:layout_constraintTop_toBottomOf="@+id/finedustimg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iconlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/mapicon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_btn_map"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/infoicon">
        </ImageView>

        <ImageView
            android:id="@+id/infoicon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_btn_info"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/mapicon">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/White"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/bottomfindustimg1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_good"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/bottomfindustlayout1">
        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomfindustlayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/bottomfindustimg1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/finedustdeftxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="14dp"
                android:text="@string/main_bottom_left_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/finedustvaluetxt1">
            </TextView>

            <TextView
                android:id="@+id/finedustvaluetxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="18dp"
                android:text="37"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finedustdeftxt1"
                app:layout_constraintRight_toLeftOf="@+id/finedustunittxt1">
            </TextView>

            <TextView
                android:id="@+id/finedustunittxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Gray"
                android:textSize="14dp"
                android:text="@string/main_bottom_finedust_unit"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/finedustvaluetxt1"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/bottomfindustimg2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_moderate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/bottomfindustlayout2">
        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomfindustlayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/finedustdeftxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="14dp"
                android:text="@string/main_bottom_right_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/finedustvaluetxt2">
            </TextView>

            <TextView
                android:id="@+id/finedustvaluetxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="18dp"
                android:text="37"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finedustdeftxt2"
                app:layout_constraintRight_toLeftOf="@+id/finedustunittxt2">
            </TextView>

            <TextView
                android:id="@+id/finedustunittxt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Gray"
                android:textSize="14dp"
                android:text="@string/main_bottom_finedust_unit"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/finedustvaluetxt2"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>